--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,7 +8,7 @@
       Velkommen til Digital Skraldedag! <br /> I den digitale verden er der masser
       af affald. <br /><br />
       <span class="font-light"
-        >Deltag i vores kamp mod digital forurening den <br/>
+        >Deltag i vores kamp mod digital forurening den
         16. marts 2024!</span>
     </p>
   </div>
