--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -20,8 +20,8 @@ import Button from "../components/Button.astro";
 
       <div class="p-4 flex items-center justify-center col-span-1 sm:order-1">
         <img
-          src="section_1.svg"
-          alt="section_1-svg"
+          src="unsure.svg"
+          alt="unsure.svg"
           class="w-32 sm:w-60"
           style="max-width: 100%; height: auto;"
         />
@@ -80,8 +80,8 @@ import Button from "../components/Button.astro";
       </div>
       <div class="p-4 flex items-center justify-center col-span-1 sm:order-2 pb-16">
         <img
-          src="section_2.svg"
-          alt="section_2-svg"
+          src="earth.svg"
+          alt="earth-svg"
           class="w-50 sm:w-90 lg:w-42"
           style="max-width: 100%; height: auto;"
         />
@@ -96,7 +96,7 @@ import Button from "../components/Button.astro";
     <!-- SEKTION 4 -->
     <a href=sektion4> <section id="sektion4">
 		
-		<div class="mt-20 mx-20 grid grid-cols-1">
+		<div class="mt-20 mx-5 grid grid-cols-1">
       <h2 class="text-[#7E2512] text-3xl text-center lg:text-5xl">
         Hvordan kan digitalt skrald fjernes?
       </h2>
@@ -108,12 +108,12 @@ import Button from "../components/Button.astro";
     </div>
 
     <section id="section_4" class="p-4 lg:mx-20 mx-5">
-      <div class="lg:grid lg:grid-cols-2 lg:grid-rows-3 lg:pb-14">
+      <div class="lg:grid lg:grid-cols-2 lg:grid-rows-3 lg:pl-10 lg:pb-14">
         <!-- RÆKKE 1 -->
         <div class="flex lg:block py-5 lg:pr-20">
           <div class="flex gap-4">
             <img
-              src="section_4.1.svg"
+              src="bin.svg"
               alt="Bin"
               class="w-10 lg:w-20 h-auto mb-4 lg:mb-0"
             />
@@ -128,7 +128,7 @@ import Button from "../components/Button.astro";
         <div class="flex lg:block py-5">
           <div class="flex lg:gap-4">
             <img
-              src="section_4.2.svg"
+              src="search.svg"
               alt="Search"
               class="w-14 pr-3 lg:pr-0 lg:w-1/2 h-auto mb-4 lg:mb-0 lg:mx-6"
             />
@@ -145,8 +145,8 @@ import Button from "../components/Button.astro";
         <div class="flex lg:block py-5 lg:pr-20">
           <div class="flex gap-4">
             <img
-              src="section_4.3.svg"
-              alt="Bin"
+              src="inbox.svg"
+              alt="Inbox"
               class="w-10 lg:w-28 h-auto mb-4 lg:mb-0"
             />
             <p class="text-[#7E2512]">
@@ -161,8 +161,8 @@ import Button from "../components/Button.astro";
         <div class="flex lg:block py-5">
           <div class="flex lg:gap-4">
             <img
-              src="section_4.4.svg"
-              alt="Bin"
+              src="pictures.svg"
+              alt="Pictures"
               class="w-14 pr-3 lg:pr-0 lg:w-1/2 h-auto mb-4 lg:mb-0 lg:mx-6"
             />
             <p class="text-[#7E2512]">
@@ -178,8 +178,8 @@ import Button from "../components/Button.astro";
         <div class="flex lg:block py-5 lg:pr-20">
           <div class="flex lg:gap-4">
             <img
-              src="section_4.5.svg"
-              alt="Bin"
+              src="cloud.svg"
+              alt="cloud"
               class="w-14 pr-3 lg:pr-0 lg:w-32 h-auto mb-4 lg:mb-0"
             />
             <p class="text-[#7E2512]">
@@ -194,8 +194,8 @@ import Button from "../components/Button.astro";
         <div class="flex lg:block py-5">
           <div class="flex lg:gap-4">
             <img
-              src="section_4.6.svg"
-              alt="Bin"
+              src="tools.svg"
+              alt="Tools"
               class="w-10 mx-2 lg:w-20 h-auto mb-4 lg:mb-0 lg:mx-10"
             />
             <p class="text-[#7E2512]">
@@ -212,7 +212,7 @@ import Button from "../components/Button.astro";
 
       <!-- GUL BOKS -->
       <div class="bg-[#D1C56D] lg:py-12 grid grid-cols-1">
-        <p class="p-10 text-center text-[#3C4A30] font-light text-xl">
+        <p class="p-10 text-center text-[#3C4A30] text-xl">
           Med hver digital oprydningssession genopretter vi ikke kun lagerplads <br
           /> – vi puster nyt liv i vores enheder, øger ydeevnen og forbedrer vores
           digitale velbefindende. <br />
@@ -233,7 +233,7 @@ import Button from "../components/Button.astro";
 
         <div class="grid grid-cols-1 md:grid-cols-2 lg:pb-14">
           <div class="p-4">
-            <img src="section_6.svg" alt="Cleaning" class="md:ml-48 md:w-2/3" />
+            <img src="content.svg" alt="Cleaning" class="md:ml-48 md:w-2/3" />
           </div>
 
           <div>
@@ -245,7 +245,7 @@ import Button from "../components/Button.astro";
                   id="surname"
                   name="surname"
                   placeholder="Fornavn*"
-                  class="rounded-full bg-[#F3EFEA] p-3 px-7 border-[#F3EFEA] w-full hover:bg-gray-100 active:bg-gray-700 focus:outline-none focus:ring focus:ring-gray-300 focus:border-2 focus:border-[#7E2512]"
+                  class="rounded-full bg-[#F3EFEA] focus:bg-white p-3 focus:ring-0 px-7 border-[#F3EFEA] w-full hover:bg-[#fcf6df] active:bg-gray-700 focus:outline-none focus:border-2 focus:border-[#7E2512]"
                 />
               </div>
 
@@ -256,7 +256,7 @@ import Button from "../components/Button.astro";
                   id="lastname"
                   name="lastname"
                   placeholder="Efternavn*"
-                  class="rounded-full bg-[#F3EFEA] p-3 px-7 border-[#F3EFEA] w-full hover:bg-gray-100 active:bg-gray-700 focus:outline-none focus:ring focus:ring-gray-300 focus:border-2 focus:border-[#7E2512]"
+                  class="rounded-full bg-[#F3EFEA] focus:bg-white p-3 focus:ring-0 px-7 border-[#F3EFEA] w-full hover:bg-[#fcf6df] active:bg-gray-700 focus:outline-none focus:border-2 focus:border-[#7E2512]"
                 />
               </div>
 
@@ -267,7 +267,7 @@ import Button from "../components/Button.astro";
                   id="email"
                   name="email"
                   placeholder="E-mail adresse*"
-                  class="rounded-full bg-[#F3EFEA] p-3 px-7 border-[#F3EFEA] w-full hover:bg-gray-100 active:bg-gray-700 focus:outline-none focus:ring focus:ring-gray-300 focus:border-2 focus:border-[#7E2512]"
+                  class="rounded-full bg-[#F3EFEA] focus:bg-white p-3 focus:ring-0 px-7 border-[#F3EFEA] w-full hover:bg-[#fcf6df] active:bg-gray-700 focus:outline-none focus:border-2 focus:border-[#7E2512]"
                 />
               </div>
 
@@ -278,7 +278,7 @@ import Button from "../components/Button.astro";
                   id="organisation"
                   name="organisation"
                   placeholder="Virksomhed (valgfrit)"
-                  class="rounded-full bg-[#F3EFEA] p-3 px-7 border-[#F3EFEA] w-full hover:bg-gray-100 active:bg-gray-700 focus:outline-none focus:ring focus:ring-gray-300 focus:border-2 focus:border-[#7E2512]"
+                  class="rounded-full bg-[#F3EFEA] focus:bg-white p-3 focus:ring-0 px-7 border-[#F3EFEA] w-full hover:bg-[#fcf6df] active:bg-gray-700 focus:outline-none focus:border-2 focus:border-[#7E2512]"
                 />
               </div>
 
@@ -319,10 +319,10 @@ import Button from "../components/Button.astro";
               </div>
 
               <div class="pt-4">
-                <input type="checkbox" class="rounded border-[#F3EFEA]" />
-                <label>Jeg accepterer vilkårene</label>
+                <input type="checkbox" class="rounded border-[#F3EFEA] focus:ring-0 text-[#7E2512]" />
+                <label>Jeg accepterer <u>vilkårene</u>*</label>
                 <div class="my-5">
-                  <input type="checkbox" class="rounded border-[#F3EFEA] focus:border-2 focus:border-[#7E2512]" />
+                  <input type="checkbox" class="rounded border-[#F3EFEA] focus:border-2 focus:ring-0 text-[#7E2512]" />
                   <label
                     >Jeg ønsker at tilmelde mig nyhedsbrevet fra World Cleanup
                     Day</label
