--- a/src/components/Sektion5.astro
+++ b/src/components/Sektion5.astro
@@ -12,8 +12,8 @@
         <p class="font-semibold text-lg col-span-9">Skriv den nuværende ledige lagerplads på din mobiltelefon</p>
     </div>
 
-   <li class="mx-12"><p><span class="font-semibold">Android:</span> Menu -- Indstillinger -- Lagerplads oprydning!</p></li>
-    <li class="mx-12 pt-4"><p><span class="font-semibold">iPhone:</span> Indstillinger -- Generelt -- Lagerplads</p></li>
+   <li class="mx-12"><p><span class="font-semibold">Android:</span> Menu > Indstillinger > Lagerplads oprydning!</p></li>
+    <li class="mx-12 pt-4"><p><span class="font-semibold">iPhone:</span> Indstillinger > Generelt > Lagerplads</p></li>
     <p class="mx-12 pt-4">Glem ikke dette, ellers vil du ikke kende resultatet af din</p>
 </div>
 
@@ -34,8 +34,8 @@
         <p class="font-semibold text-lg col-span-9">Plej din cache</p>
     </div>
     
-   <li class="mx-12"><p><span class="font-semibold">Android:</span> gå til Indstillinger -- Tryk på Lagerplads -- Find den applikation, du ønsker at rydde -- Ryd cache</p></li>
-    <li class="mx-12 pt-4"><p><span class="font-semibold">iPhone:</span>  gå til Indstillinger -- Safari -- Ryd historik og webstedsdata -- Ryd historik og data Tjek også, hvor meget plads dine apps optager, gå til Indstillinger -- Generelt -- Brug.</p></li>
+   <li class="mx-12"><p><span class="font-semibold">Android:</span> Gå til Indstillinger > Tryk på Lagerplads > Find den applikation, du ønsker at rydde > Ryd cache</p></li>
+    <li class="mx-12 pt-4"><p><span class="font-semibold">iPhone:</span>  Gå til Indstillinger > Safari > Ryd historik og webstedsdata > Ryd historik og data Tjek også, hvor meget plads dine apps optager, gå til Indstillinger > Generelt > Brug.</p></li>
     <li class="mx-12 pt-4"><p>Du bør slette de tungeste apps og geninstallere dem igen. Du vil blive overrasket over, hvor meget mere plads dette giver dig. </p></li>
 </div>
 
