--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -28,10 +28,10 @@ import Button from "../components/Button.astro";
       </div>
       <div class="p-4 flex flex-col justify-center col-span-1 sm:order-2">
         <div>
-          <h2 class="text-[#7E2512] text-3xl text-center lg:text-5xl lg:text-left ">Hvad er digitalt skrald?</h2>
+          <h2 class="text-[#7E2512] text-3xl text-center lg:text-5xl lg:text-left">Hvad er digitalt skrald?</h2>
           <p class="py-10 prose text-[#7E2512]">
             Digitalt affald, eller e-affald, er ikke kun begrænset til de
-            fysiske enheder, der samler støv i vores skabe. <br />
+            fysiske enheder, der samler støv i vores skabe.
             Det omfatter også de data og digitale fodafbry vi efterlader i skyen,
             når vi opdaterer vores enheder, sletter filer eller dropper gamle apps
             og konti.
