--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -3,7 +3,7 @@ import Button from "../components/Button.astro";
 ---
 
 <div>
-  <h3 class="text-[#3C4A30] text-center pt-8 text-xl font-light lg:pt-20">
+  <h3 class="text-[#3C4A30] text-center pt-8 text-xl lg:pt-20">
     Sorterer du dit digitale skrald?
   </h3>
   <h1 class="text-[#3C4A30] text-center pt-5 text-5xl lg:text-7xl">
