--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -2,29 +2,77 @@
 import Button from "../components/Button.astro";
 ---
 
-<div x-data="{ showmenu: false }" class="" >
-  <div id="navbar" class="flex flex-row justify-between ">
-      <nav id="desktopmenu" class="hidden lg:block">
-          <ul class="flex flex-row gap-6 lg:pr-26 lg:pt-4 lg:text-md">
-              <li class="text-[#D6D1BE] hover:text-[#3C4A30] hover:underline decoration-solid"><a href="#sektion1">Digitalt affald?</a></li>
-              <li class="text-[#D6D1BE] hover:text-[#3C4A30] hover:underline decoration-solid"><a href="#sektion2">Om problemet</a></li>
-              <li class="text-[#D6D1BE] hover:text-[#3C4A30] hover:underline decoration-solid"><a href="#sektion3">Vidste du?</a></li>
-              <li class="text-[#D6D1BE] hover:text-[#3C4A30] hover:underline decoration-solid"><a href="#sektion4">Hvordan gør jeg?</a></li>
-              <li class="text-[#D6D1BE] hover:text-[#3C4A30] hover:underline decoration-solid"><a href="#sektion5">Hvor meget?</a></li>
-             <a href="#sektion6"> <Button variant="secondary" size="small">Tilmeld</Button></a>
-          </ul>
-      </nav>
-      <button id="burgermenu" class="lg:hidden pr-4 mx-24 pt-10 text-[#D6D1BE] font-semibold" x-on:click="showmenu = ! showmenu">Menu</button>
-  </div>
-  <nav id="mobilmenu" class="flex flex-col pt-5" 
-  x-show="showmenu" x-transition x-on:click="showmenu = false" x-on:click.outside="showmenu = false">
-      <ul class= "font-light">
-          <li class="text-[#D6D1BE] text-center py-4 "><a href="#sektion1">Digitalt affald?</a></li>
-          <li class="text-[#D6D1BE] text-center py-4 "><a href="#sektion2">Om problemet</a></li>
-          <li class="text-[#D6D1BE] text-center py-4 "><a href="#sektion3">Vidste du?</a></li>
-          <li class="text-[#D6D1BE] text-center py-4 "><a href="#sektion4">Hvordan gør jeg?</a></li>
-          <li class="text-[#D6D1BE] text-center py-4 "><a href="#sektion5">Hvor meget?</a></li>
-         <a href="#sektion6"> <div class="flex justify-end pr-14 py-4"> <Button class="px-10" variant="secondary" size="small">Tilmeld</Button> </div></a>
+<div x-data="{ showmenu: false }" class="">
+  <div id="navbar" class="flex flex-row justify-between">
+    <nav id="desktopmenu" class="hidden lg:block">
+      <ul class="flex flex-row gap-6 lg:pr-26 lg:pt-4 lg:text-md">
+        <li
+          class="text-[#D6D1BE] hover:text-[#3C4A30] hover:underline decoration-solid"
+        >
+          <a href="#sektion1">Digitalt affald?</a>
+        </li>
+        <li
+          class="text-[#D6D1BE] hover:text-[#3C4A30] hover:underline decoration-solid"
+        >
+          <a href="#sektion2">Om problemet</a>
+        </li>
+        <li
+          class="text-[#D6D1BE] hover:text-[#3C4A30] hover:underline decoration-solid"
+        >
+          <a href="#sektion3">Vidste du?</a>
+        </li>
+        <li
+          class="text-[#D6D1BE] hover:text-[#3C4A30] hover:underline decoration-solid"
+        >
+          <a href="#sektion4">Hvordan gør jeg?</a>
+        </li>
+        <li
+          class="text-[#D6D1BE] hover:text-[#3C4A30] hover:underline decoration-solid"
+        >
+          <a href="#sektion5">Hvor meget?</a>
+        </li>
+        <a href="#sektion6">
+          <Button variant="secondary" size="small">Tilmeld</Button></a
+        >
       </ul>
+    </nav>
+    <button
+      id="burgermenu"
+      class="lg:hidden pr-4 mx-24 pt-10 text-[#D6D1BE] font-semibold"
+      x-on:click="showmenu = ! showmenu">Menu</button
+    >
+  </div>
+  <nav
+    id="mobilmenu"
+    class="flex flex-col pt-5"
+    x-show="showmenu"
+    x-transition
+    x-on:click="showmenu = false"
+    x-on:click.outside="showmenu = false"
+  >
+    <ul class="font-light">
+      <li class="text-[#D6D1BE] text-center py-4 hover:text-[#3C4A30] hover:underline decoration-solid">
+        <a href="#sektion1">Digitalt affald?</a>
+      </li>
+      <li class="text-[#D6D1BE] text-center py-4 hover:text-[#3C4A30] hover:underline decoration-solid">
+        <a href="#sektion2">Om problemet</a>
+      </li>
+      <li class="text-[#D6D1BE] text-center py-4 hover:text-[#3C4A30] hover:underline decoration-solid">
+        <a href="#sektion3">Vidste du?</a>
+      </li>
+      <li class="text-[#D6D1BE] text-center py-4 hover:text-[#3C4A30] hover:underline decoration-solid">
+        <a href="#sektion4">Hvordan gør jeg?</a>
+      </li>
+      <li class="text-[#D6D1BE] text-center py-4 hover:text-[#3C4A30] hover:underline decoration-solid">
+        <a href="#sektion5">Hvor meget?</a>
+      </li>
+      <a href="#sektion6">
+        <div class="flex justify-end pr-20 py-2">
+          <Button class="px-10" variant="secondary" size="small">
+            Tilmeld
+          </Button>
+        </div></a
+      >
+    </ul>
   </nav>
 </div>
