--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -117,7 +117,7 @@ import Button from "../components/Button.astro";
               alt="Bin"
               class="w-10 lg:w-20 h-auto mb-4 lg:mb-0"
             />
-            <p class="text-[#7E2512]">
+            <p class="text-[#7E2512] lg:pl-12">
               <strong>Slet ubrugte applikationer</strong>
               <br />
               Sig farvel til de glemte apps, der samler virtuelt støv. Afinstaller
@@ -149,7 +149,7 @@ import Button from "../components/Button.astro";
               alt="Inbox"
               class="w-10 lg:w-28 h-auto mb-4 lg:mb-0"
             />
-            <p class="text-[#7E2512]">
+            <p class="text-[#7E2512] lg:pl-4">
               <strong>Indbakke intervention</strong>
               <br />
               Tæm udyret, der er din e-mail-indbakke ved nådesløst at afmelde dig
@@ -198,7 +198,7 @@ import Button from "../components/Button.astro";
               alt="Tools"
               class="w-10 mx-2 lg:w-20 h-auto mb-4 lg:mb-0 lg:mx-10"
             />
-            <p class="text-[#7E2512]">
+            <p class="text-[#7E2512] lg:pl-10">
               <strong>Udnyt indbyggede værktøjer</strong>
               <br />
               Udløs kraften fra indbyggede enhedsværktøjer designet til at optimere
@@ -320,7 +320,7 @@ import Button from "../components/Button.astro";
 
               <div class="pt-4">
                 <input type="checkbox" class="rounded border-[#F3EFEA] focus:ring-0 text-[#7E2512]" />
-                <label>Jeg accepterer <u>vilkårene</u>*</label>
+                <label>Jeg accepterer <u><a href="#">vilkårene</a></u>*</label>
                 <div class="my-5">
                   <input type="checkbox" class="rounded border-[#F3EFEA] focus:border-2 focus:ring-0 text-[#7E2512]" />
                   <label
