Helvetica light fjernet

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -50,20 +50,30 @@ import Button from "../components/Button.astro";
     x-on:click="showmenu = false"
     x-on:click.outside="showmenu = false"
   >
-    <ul class="font-light">
-      <li class="text-[#D6D1BE] text-center py-4 hover:text-[#3C4A30] hover:underline decoration-solid">
+    <ul>
+      <li
+        class="text-[#D6D1BE] text-center py-4 hover:text-[#3C4A30] hover:underline decoration-solid"
+      >
         <a href="#sektion1">Digitalt affald?</a>
       </li>
-      <li class="text-[#D6D1BE] text-center py-4 hover:text-[#3C4A30] hover:underline decoration-solid">
+      <li
+        class="text-[#D6D1BE] text-center py-4 hover:text-[#3C4A30] hover:underline decoration-solid"
+      >
         <a href="#sektion2">Om problemet</a>
       </li>
-      <li class="text-[#D6D1BE] text-center py-4 hover:text-[#3C4A30] hover:underline decoration-solid">
+      <li
+        class="text-[#D6D1BE] text-center py-4 hover:text-[#3C4A30] hover:underline decoration-solid"
+      >
         <a href="#sektion3">Vidste du?</a>
       </li>
-      <li class="text-[#D6D1BE] text-center py-4 hover:text-[#3C4A30] hover:underline decoration-solid">
+      <li
+        class="text-[#D6D1BE] text-center py-4 hover:text-[#3C4A30] hover:underline decoration-solid"
+      >
         <a href="#sektion4">Hvordan gør jeg?</a>
       </li>
-      <li class="text-[#D6D1BE] text-center py-4 hover:text-[#3C4A30] hover:underline decoration-solid">
+      <li
+        class="text-[#D6D1BE] text-center py-4 hover:text-[#3C4A30] hover:underline decoration-solid"
+      >
         <a href="#sektion5">Hvor meget?</a>
       </li>
       <a href="#sektion6">
