--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -7,27 +7,27 @@ import Button from "../components/Button.astro";
     <nav id="desktopmenu" class="hidden lg:block">
       <ul class="flex flex-row gap-6 lg:pr-26 lg:pt-4 lg:text-md">
         <li
-          class="text-[#D6D1BE] hover:text-[#3C4A30] hover:underline decoration-solid"
+          class="text-[#D6D1BE] hover:text-[#203321] hover:underline decoration-solid"
         >
           <a href="#sektion1">Digitalt affald?</a>
         </li>
         <li
-          class="text-[#D6D1BE] hover:text-[#3C4A30] hover:underline decoration-solid"
+          class="text-[#D6D1BE] hover:text-[#203321] hover:underline decoration-solid"
         >
           <a href="#sektion2">Om problemet</a>
         </li>
         <li
-          class="text-[#D6D1BE] hover:text-[#3C4A30] hover:underline decoration-solid"
+          class="text-[#D6D1BE] hover:text-[#203321] hover:underline decoration-solid"
         >
           <a href="#sektion3">Vidste du?</a>
         </li>
         <li
-          class="text-[#D6D1BE] hover:text-[#3C4A30] hover:underline decoration-solid"
+          class="text-[#D6D1BE] hover:text-[#203321] hover:underline decoration-solid"
         >
           <a href="#sektion4">Hvordan gør jeg?</a>
         </li>
         <li
-          class="text-[#D6D1BE] hover:text-[#3C4A30] hover:underline decoration-solid"
+          class="text-[#D6D1BE] hover:text-[#203321] hover:underline decoration-solid"
         >
           <a href="#sektion5">Hvor meget?</a>
         </li>
@@ -52,27 +52,27 @@ import Button from "../components/Button.astro";
   >
     <ul>
       <li
-        class="text-[#D6D1BE] text-center py-4 hover:text-[#3C4A30] hover:underline decoration-solid"
+        class="text-[#D6D1BE] text-center py-4 hover:text-[#203321] hover:underline decoration-solid"
       >
         <a href="#sektion1">Digitalt affald?</a>
       </li>
       <li
-        class="text-[#D6D1BE] text-center py-4 hover:text-[#3C4A30] hover:underline decoration-solid"
+        class="text-[#D6D1BE] text-center py-4 hover:text-[#203321] hover:underline decoration-solid"
       >
         <a href="#sektion2">Om problemet</a>
       </li>
       <li
-        class="text-[#D6D1BE] text-center py-4 hover:text-[#3C4A30] hover:underline decoration-solid"
+        class="text-[#D6D1BE] text-center py-4 hover:text-[#203321] hover:underline decoration-solid"
       >
         <a href="#sektion3">Vidste du?</a>
       </li>
       <li
-        class="text-[#D6D1BE] text-center py-4 hover:text-[#3C4A30] hover:underline decoration-solid"
+        class="text-[#D6D1BE] text-center py-4 hover:text-[#203321] hover:underline decoration-solid"
       >
         <a href="#sektion4">Hvordan gør jeg?</a>
       </li>
       <li
-        class="text-[#D6D1BE] text-center py-4 hover:text-[#3C4A30] hover:underline decoration-solid"
+        class="text-[#D6D1BE] text-center py-4 hover:text-[#203321] hover:underline decoration-solid"
       >
         <a href="#sektion5">Hvor meget?</a>
       </li>
