--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -329,7 +329,7 @@ import Button from "../components/Button.astro";
                   >
                 </div>
 
-                <div class="mb-5 flex justify-center pb-10">
+                <div class="mb-5 flex justify-center pb-10 lg:p-5">
                   <Button variant="primary" size="large">Indsend</Button>
                 </div>
               </div>
