--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -7,27 +7,27 @@ import Button from "../components/Button.astro";
     <nav id="desktopmenu" class="hidden lg:block">
       <ul class="flex flex-row gap-6 lg:pr-26 lg:pt-4 lg:text-md">
         <li
-          class="text-[#D6D1BE] hover:text-[#203321] hover:underline decoration-solid"
+          class="text-[#fffce2] hover:text-[#203321] hover:underline decoration-solid"
         >
           <a href="#sektion1">Digitalt affald?</a>
         </li>
         <li
-          class="text-[#D6D1BE] hover:text-[#203321] hover:underline decoration-solid"
+          class="text-[#fffce2] hover:text-[#203321] hover:underline decoration-solid"
         >
           <a href="#sektion2">Om problemet</a>
         </li>
         <li
-          class="text-[#D6D1BE] hover:text-[#203321] hover:underline decoration-solid"
+          class="text-[#fffce2] hover:text-[#203321] hover:underline decoration-solid"
         >
           <a href="#sektion3">Vidste du?</a>
         </li>
         <li
-          class="text-[#D6D1BE] hover:text-[#203321] hover:underline decoration-solid"
+          class="text-[#fffce2] hover:text-[#203321] hover:underline decoration-solid"
         >
           <a href="#sektion4">Hvordan gør jeg?</a>
         </li>
         <li
-          class="text-[#D6D1BE] hover:text-[#203321] hover:underline decoration-solid"
+          class="text-[#fffce2] hover:text-[#203321] hover:underline decoration-solid"
         >
           <a href="#sektion5">Hvor meget?</a>
         </li>
@@ -38,7 +38,7 @@ import Button from "../components/Button.astro";
     </nav>
     <button
       id="burgermenu"
-      class="lg:hidden pr-4 mx-24 pt-10 text-[#D6D1BE] font-semibold"
+      class="lg:hidden pr-4 mx-24 pt-10 text-[#fffce2] font-semibold"
       x-on:click="showmenu = ! showmenu">Menu</button
     >
   </div>
@@ -52,27 +52,27 @@ import Button from "../components/Button.astro";
   >
     <ul>
       <li
-        class="text-[#D6D1BE] text-center py-4 hover:text-[#203321] hover:underline decoration-solid"
+        class="text-[#fffce2] text-center py-4 hover:text-[#203321] hover:underline decoration-solid"
       >
         <a href="#sektion1">Digitalt affald?</a>
       </li>
       <li
-        class="text-[#D6D1BE] text-center py-4 hover:text-[#203321] hover:underline decoration-solid"
+        class="text-[#fffce2] text-center py-4 hover:text-[#203321] hover:underline decoration-solid"
       >
         <a href="#sektion2">Om problemet</a>
       </li>
       <li
-        class="text-[#D6D1BE] text-center py-4 hover:text-[#203321] hover:underline decoration-solid"
+        class="text-[#fffce2] text-center py-4 hover:text-[#203321] hover:underline decoration-solid"
       >
         <a href="#sektion3">Vidste du?</a>
       </li>
       <li
-        class="text-[#D6D1BE] text-center py-4 hover:text-[#203321] hover:underline decoration-solid"
+        class="text-[#fffce2] text-center py-4 hover:text-[#203321] hover:underline decoration-solid"
       >
         <a href="#sektion4">Hvordan gør jeg?</a>
       </li>
       <li
-        class="text-[#D6D1BE] text-center py-4 hover:text-[#203321] hover:underline decoration-solid"
+        class="text-[#fffce2] text-center py-4 hover:text-[#203321] hover:underline decoration-solid"
       >
         <a href="#sektion5">Hvor meget?</a>
       </li>
