--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -12,7 +12,7 @@ const { title } = Astro.props;
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" type="image/x-icon" href="../src/assets/images/skraldespand.svg"/>
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">		
 		<meta name="generator" content={Astro.generator} />
 		<meta
 		name="description"
