--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -245,7 +245,7 @@ import Button from "../components/Button.astro";
                   id="surname"
                   name="surname"
                   placeholder="Fornavn*"
-                  class="rounded-full bg-[#F3EFEA] focus:bg-white p-3 focus:ring-0 px-7 border-[#F3EFEA] w-full hover:bg-[#fcf6df] active:bg-gray-700 focus:outline-none focus:border-2 focus:border-[#7E2512]"
+                  class="placeholder-black rounded-full bg-[#F3EFEA] focus:bg-white p-3 focus:ring-0 px-7 border-[#F3EFEA] w-full hover:bg-[#fcf6df] active:bg-gray-700 focus:outline-none focus:border-2 focus:border-[#7E2512]"
                 />
               </div>
 
@@ -256,7 +256,7 @@ import Button from "../components/Button.astro";
                   id="lastname"
                   name="lastname"
                   placeholder="Efternavn*"
-                  class="rounded-full bg-[#F3EFEA] focus:bg-white p-3 focus:ring-0 px-7 border-[#F3EFEA] w-full hover:bg-[#fcf6df] active:bg-gray-700 focus:outline-none focus:border-2 focus:border-[#7E2512]"
+                  class="placeholder-black rounded-full bg-[#F3EFEA] focus:bg-white p-3 focus:ring-0 px-7 border-[#F3EFEA] w-full hover:bg-[#fcf6df] active:bg-gray-700 focus:outline-none focus:border-2 focus:border-[#7E2512]"
                 />
               </div>
 
@@ -267,7 +267,7 @@ import Button from "../components/Button.astro";
                   id="email"
                   name="email"
                   placeholder="E-mail adresse*"
-                  class="rounded-full bg-[#F3EFEA] focus:bg-white p-3 focus:ring-0 px-7 border-[#F3EFEA] w-full hover:bg-[#fcf6df] active:bg-gray-700 focus:outline-none focus:border-2 focus:border-[#7E2512]"
+                  class="placeholder-black rounded-full bg-[#F3EFEA] focus:bg-white p-3 focus:ring-0 px-7 border-[#F3EFEA] w-full hover:bg-[#fcf6df] active:bg-gray-700 focus:outline-none focus:border-2 focus:border-[#7E2512]"
                 />
               </div>
 
@@ -278,7 +278,7 @@ import Button from "../components/Button.astro";
                   id="organisation"
                   name="organisation"
                   placeholder="Virksomhed (valgfrit)"
-                  class="rounded-full bg-[#F3EFEA] focus:bg-white p-3 focus:ring-0 px-7 border-[#F3EFEA] w-full hover:bg-[#fcf6df] active:bg-gray-700 focus:outline-none focus:border-2 focus:border-[#7E2512]"
+                  class="placeholder-black rounded-full bg-[#F3EFEA] focus:bg-white p-3 focus:ring-0 px-7 border-[#F3EFEA] w-full hover:bg-[#fcf6df] active:bg-gray-700 focus:outline-none focus:border-2 focus:border-[#7E2512]"
                 />
               </div>
 
@@ -287,13 +287,13 @@ import Button from "../components/Button.astro";
                   class="bg-[#F3EFEA] border-none px-7 rounded-full flex items-center justify-between"
                   style="border-color: #6B7280; border-width: 1px"
                 >
-                  <label for="quantity" class="mr-3 text-[#6F7583]"
+                  <label for="quantity" class="mr-3 text-black"
                     >Antal deltagere*</label
                   >
                   <input
                     type="number"
                     id="quantity"
-                    class="bg-[#F3EFEA] quantity-input w-16 border-none p-3 text-[#6F7583] focus:border-2 focus:border-[#7E2512]"
+                    class="bg-[#F3EFEA] quantity-input w-16 border-none p-3 text-black focus:border-2 focus:border-[#7E2512]"
                     value="0"
                     min="0"
                   />
@@ -305,13 +305,13 @@ import Button from "../components/Button.astro";
                   class="bg-[#F3EFEA] border-none border-2 px-7 rounded-full flex items-center justify-between"
                   style="border-color: #6B7280; border-width: 1px"
                 >
-                  <label for="quantity" class="mr-3 text-[#6F7583] "
+                  <label for="quantity" class="mr-3 text-black "
                     >Slettet GB*</label
                   >
                   <input
                     type="number"
                     id="quantity"
-                    class="bg-[#F3EFEA] quantity-input w-16 border-none p-3 text-[#6F7583]"
+                    class="bg-[#F3EFEA] quantity-input w-16 border-none p-3 text-black"
                     value="0"
                     min="0"
                   />
@@ -319,10 +319,10 @@ import Button from "../components/Button.astro";
               </div>
 
               <div class="pt-4">
-                <input type="checkbox" class="rounded border-[#F3EFEA] focus:ring-0 text-[#7E2512]" />
+                <input type="checkbox" id="checkbox" class="rounded border-[#F3EFEA] focus:ring-0 text-[#7E2512]" />
                 <label>Jeg accepterer <u><a href="#">vilkårene</a></u>*</label>
                 <div class="my-5">
-                  <input type="checkbox" class="rounded border-[#F3EFEA] focus:border-2 focus:ring-0 text-[#7E2512]" />
+                  <input type="checkbox" id="checkbox" class="rounded border-[#F3EFEA] focus:border-2 focus:ring-0 text-[#7E2512]" />
                   <label
                     >Jeg ønsker at tilmelde mig nyhedsbrevet fra World Cleanup
                     Day</label
