--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,16 +2,12 @@
 import Button from "../components/Button.astro";
 ---
 
-<div>
-  <h3 class="text-[#3C4A30] text-center pt-8 text-xl lg:pt-20">
+<div class="text-center mt-7 lg:mt-20">
+  <span class="text-[#3C4A30] pt-8 text-xl lg:pt-20">
     Sorterer du dit digitale skrald?
-  </h3>
-  <h1 class="text-[#3C4A30] text-center pt-5 text-5xl lg:text-7xl">
-    Digital skraldedag
-  </h1>
-  <h3
-    class="text-[#3C4A30] text-2xl font-semibold text-center pt-5 pb-4 lg:pt-10"
-  >
+  </span>
+  <h1 class="text-[#3C4A30] pt-5 text-5xl lg:text-7xl">Digital skraldedag</h1>
+  <h3 class="text-[#3C4A30] text-2xl font-semibold pt-5 pb-4 lg:pt-10">
     Deltag den 14. marts 2024
   </h3>
 </div>
