--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -94,8 +94,8 @@ import Button from "../components/Button.astro";
 	</section> </a>
 
     <!-- SEKTION 4 -->
-    <a href=sektion4> <section id="sektion4">
-		
+    <a href=sektion4></a>
+    <section id="sektion4">
 		<div class="mt-20 mx-5 grid grid-cols-1">
       <h2 class="text-[#7E2512] text-3xl text-center lg:text-5xl">
         Hvordan kan digitalt skrald fjernes?
@@ -226,7 +226,8 @@ import Button from "../components/Button.astro";
 	</section></a>
 
       <!-- SEKTION 6 -->
-      <a href=sektion6> <section id="sektion6" class="bg-[#D6D1BE]">
+      <a href=sektion6></a>
+        <section id="sektion6" class="bg-[#D6D1BE]">
         <h1 class="mb-8 text-[#7E2512] text-center pt-10 text-3xl lg:pt-16 lg:pb-14 lg:text-5xl">
           Registrér din digitale oprydning
         </h1>  </a>
@@ -319,10 +320,10 @@ import Button from "../components/Button.astro";
               </div>
 
               <div class="pt-4">
-                <input type="checkbox" id="checkbox" class="rounded border-[#F3EFEA] focus:ring-0 text-[#7E2512]" />
+                <input type="checkbox" id="terms" class="rounded border-[#F3EFEA] focus:ring-0 text-[#7E2512]" />
                 <label>Jeg accepterer <u><a href="#">vilkårene</a></u>*</label>
                 <div class="my-5">
-                  <input type="checkbox" id="checkbox" class="rounded border-[#F3EFEA] focus:border-2 focus:ring-0 text-[#7E2512]" />
+                  <input type="checkbox" id="newsletter" class="rounded border-[#F3EFEA] focus:border-2 focus:ring-0 text-[#7E2512]" />
                   <label
                     >Jeg ønsker at tilmelde mig nyhedsbrevet fra World Cleanup
                     Day</label
