--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,8 +2,8 @@
 import Button from "../components/Button.astro";
 ---
 
-<div class="text-center mt-7 lg:mt-20">
-  <span class="text-[#3C4A30] pt-8 text-xl lg:pt-20">
+<div class="text-center mt-20">
+  <span class="text-[#3C4A30] pt-12 text-xl lg:pt-20">
     Sorterer du dit digitale skrald?
   </span>
   <h1 class="text-[#3C4A30] pt-5 text-5xl lg:text-7xl">Digital skraldedag</h1>
