--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -14,7 +14,7 @@ import Button from "../components/Button.astro";
         <li
           class="text-[#fffce2] hover:text-[#203321] hover:underline decoration-solid"
         >
-          <a href="#sektion2">Om problemet</a>
+          <a href="#sektion2">Problemet</a>
         </li>
         <li
           class="text-[#fffce2] hover:text-[#203321] hover:underline decoration-solid"
@@ -59,7 +59,7 @@ import Button from "../components/Button.astro";
       <li
         class="text-[#fffce2] text-center py-4 hover:text-[#203321] hover:underline decoration-solid"
       >
-        <a href="#sektion2">Om problemet</a>
+        <a href="#sektion2">Problemet</a>
       </li>
       <li
         class="text-[#fffce2] text-center py-4 hover:text-[#203321] hover:underline decoration-solid"
