--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,7 +15,6 @@ import Button from "../components/Button.astro";
       </section>
 
       <!-- SEKTION 1 -->
-      <a href="sektion1">
         <section
           id="sektion1"
           class="lg:mx-20 mx-5 grid grid-cols-1 sm:grid-cols-2 lg:pt-14 lg:pb-20"
@@ -57,10 +56,8 @@ import Button from "../components/Button.astro";
             </div>
           </div>
         </section>
-      </a>
 
       <!-- SEKTION 2 -->
-      <a href="sektion2">
         <section
           id="sektion2"
           class="lg:mx-20 mx-5 grid grid-cols-1 sm:grid-cols-2"
@@ -103,22 +100,18 @@ import Button from "../components/Button.astro";
             />
           </div>
         </section>
-      </a>
 
       <!-- SEKTION 3 -->
-      <a href="sektion3"
-        ><section id="sektion3" class="w-full bg-[#D6D1BE]">
+      <section id="sektion3" class="w-full bg-[#D6D1BE]">
           <Sektion3 />
         </section>
-      </a>
 
       <!-- SEKTION 4 -->
       <section id="sektion4">
-        <a href="#sektion4"
-          ><h2 class="text-[#7E2512] py-10 text-3xl text-center lg:text-5xl">
+          <h2 class="text-[#7E2512] py-10 text-3xl text-center lg:text-5xl">
             Hvordan kan digitalt skrald fjernes?
-          </h2></a
-        >
+          </h2>
+        
         <div class="mx-5 grid grid-cols-1">
           <p class="text-[#7E2512] lg:text-center">
             Lad os begive os ud på et digitalt oprydningseventyr for at frigøre
@@ -243,11 +236,9 @@ import Button from "../components/Button.astro";
       </div>
 
       <!-- SEKTION 5 -->
-      <a href="sektion5"
-        ><section id="sektion5" class="w-full">
+      <section id="sektion5" class="w-full">
           <Sektion5 />
-        </section></a
-      >
+        </section></a>
 
       <!-- SEKTION 6 -->
       <section id="sektion6" class="bg-[#D6D1BE]">
